syntax = "proto3";

package user;

service UserService {
  rpc RegisterUser (RegisterUserRequest) returns (UserResponse);
  rpc LoginUser (LoginUserRequest) returns (TokenResponse);
  rpc GetUser (GetUserRequest) returns (UserResponse);
  rpc UpdateUser (UpdateUserRequest) returns (UserResponse);
}

message RegisterUserRequest {
  string firstName = 1;
  string lastName = 2;
  string email = 3;
  string password = 4;
}

message LoginUserRequest {
  string email = 1;
  string password = 2;
}

message GetUserRequest {
  string id = 1;
}

message UpdateUserRequest {
  string id = 1;
  string firstName = 2;
  string lastName = 3;
  string email = 4;
  string password = 5;
}

message UserResponse {
  string id = 1;
  string firstName = 2;
  string lastName = 3;
  string email = 4;
}

message TokenResponse {
  string message = 1;
  string token = 2;
}
